Implemented base version of Azure Service Bus

--- a/Receiver/appsettings.azure-service-bus.json
+++ b/Receiver/appsettings.azure-service-bus.json
@@ -1,2 +1,8 @@
 {
+	"ConnectionStrings": {
+		"ServiceBusNamespaceConnectionString": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=testQueue;SharedAccessKey=K5UEp82471dRIaVK3IapFV8gO4wodMLbyLWHE+kKCf0=;EntityPath=test"
+	},
+	"ServiceBusSettings": {
+		"QueueName": "test"
+	}
 }
