Implemented base version of NServiceBus with RabbitMQ

--- a/Sender/appsettings.n-service-bus.json
+++ b/Sender/appsettings.n-service-bus.json
@@ -1,2 +1,7 @@
 {
+	"ConnectionSettings": {
+		"HostName": "localhost",
+		"SenderEndpointName": "Sender",
+		"ReceiverEndpointName": "Receiver"
+	}
 }
