--- a/Receiver/Receiver.csproj
+++ b/Receiver/Receiver.csproj
@@ -14,6 +14,8 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="NServiceBus" Version="8.0.1" />
+		<PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.0" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
 	</ItemGroup>
 
