--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -9,6 +9,8 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="NServiceBus" Version="8.0.1" />
+		<PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.0" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
 	</ItemGroup>
 
