Renamed NServiceBus to NServiceBusRabbitMQ and prepared configs for NServiceBusAzureServiceBus

--- a/Receiver/Properties/launchSettings.json
+++ b/Receiver/Properties/launchSettings.json
@@ -1,28 +1,28 @@
 {
-  "profiles": {
-    "MicrosoftBizTalkReceiver": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "MESSAGE_BUS_RECEIVER_TYPE": "MicrosoftBizTalkServer"
-      }
-    },
-    "RabbitMQReceiver": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "MESSAGE_BUS_RECEIVER_TYPE": "RabbitMQ"
-      }
-    },
-    "NServiceBusReceiver": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "MESSAGE_BUS_RECEIVER_TYPE": "NServiceBus"
-      }
-    },
-    "AzureServiceBusReceiver": {
-      "commandName": "Project",
-      "environmentVariables": {
-        "MESSAGE_BUS_RECEIVER_TYPE": "AzureServiceBus"
-      }
-    }
-  }
+	"profiles": {
+		"AzureServiceBusReceiver": {
+			"commandName": "Project",
+			"environmentVariables": {
+				"MESSAGE_BUS_RECEIVER_TYPE": "AzureServiceBus"
+			}
+		},
+		"RabbitMQReceiver": {
+			"commandName": "Project",
+			"environmentVariables": {
+				"MESSAGE_BUS_RECEIVER_TYPE": "RabbitMQ"
+			}
+		},
+		"NServiceBusAzureServiceBusReceiver": {
+			"commandName": "Project",
+			"environmentVariables": {
+				"MESSAGE_BUS_RECEIVER_TYPE": "NServiceBusAzureServiceBus"
+			}
+		},
+		"NServiceBusRabbitMQReceiver": {
+			"commandName": "Project",
+			"environmentVariables": {
+				"MESSAGE_BUS_RECEIVER_TYPE": "NServiceBusRabbitMQ"
+			}
+		}
+	}
 }
