--- a/Sender/appsettings.n-service-bus-azure-service-bus.json
+++ b/Sender/appsettings.n-service-bus-azure-service-bus.json
@@ -1,2 +1,10 @@
 {
+	"ConnectionStrings": {
+		"ServiceBusNamespaceConnectionString": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
+	},
+	"ServiceBusSettings": {
+		"ReceiverEndpointName": "Receiver",
+		"SenderEndpointName": "Sender",
+		"TopicName": "nservicebus"
+	}
 }
