--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -7,10 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.1" />
+		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.12.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-		<PackageReference Include="NServiceBus" Version="8.0.1" />
+		<PackageReference Include="NServiceBus" Version="8.0.3" />
 		<PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.0" />
+		<PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="3.1.2" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
 	</ItemGroup>
 
