Refactored configuration files

--- a/Receiver/appsettings.azure-service-bus.json
+++ b/Receiver/appsettings.azure-service-bus.json
@@ -1,8 +1,8 @@
 {
 	"ConnectionStrings": {
-		"ServiceBusNamespaceConnectionString": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=testQueue;SharedAccessKey=K5UEp82471dRIaVK3IapFV8gO4wodMLbyLWHE+kKCf0=;EntityPath=test"
+		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
-	"ServiceBusSettings": {
-		"QueueName": "test"
+	"ConnectionSettings": {
+		"QueueName": "nativereceiver"
 	}
 }
