--- a/Sender/appsettings.n-service-bus-azure-service-bus.json
+++ b/Sender/appsettings.n-service-bus-azure-service-bus.json
@@ -1,10 +1,10 @@
 {
 	"ConnectionStrings": {
-		"ServiceBusNamespaceConnectionString": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
+		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
-	"ServiceBusSettings": {
-		"ReceiverEndpointName": "Receiver",
-		"SenderEndpointName": "Sender",
-		"TopicName": "nservicebus"
+	"ConnectionSettings": {
+		"ReceiverEndpointName": "NServiceBusReceiver",
+		"SenderEndpointName": "NServiceBusSender",
+		"TopicName": "n-service-bus"
 	}
 }
