--- a/Sender/appsettings.n-service-bus-rabbit-mq.json
+++ b/Sender/appsettings.n-service-bus-rabbit-mq.json
@@ -1,7 +1,7 @@
 {
 	"ConnectionSettings": {
 		"HostName": "localhost",
-		"SenderEndpointName": "Sender",
-		"ReceiverEndpointName": "Receiver"
+		"SenderEndpointName": "NServiceBusSender",
+		"ReceiverEndpointName": "NServiceBusReceiver"
 	}
 }
