--- a/Receiver/appsettings.n-service-bus-azure-service-bus.json
+++ b/Receiver/appsettings.n-service-bus-azure-service-bus.json
@@ -1,9 +1,9 @@
 {
 	"ConnectionStrings": {
-		"ServiceBusNamespaceConnectionString": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
+		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
-	"ServiceBusSettings": {
-		"ReceiverEndpointName": "Receiver",
-		"TopicName": "nservicebus"
+	"ConnectionSettings": {
+		"ReceiverEndpointName": "NServiceBusReceiver",
+		"TopicName": "n-service-bus"
 	}
 }
