--- a/Receiver/appsettings.n-service-bus-rabbit-mq.json
+++ b/Receiver/appsettings.n-service-bus-rabbit-mq.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionSettings": {
 		"HostName": "localhost",
-		"ReceiverEndpointName": "Receiver"
+		"ReceiverEndpointName": "NServiceBusReceiver"
 	}
 }
