Implemented main menu Implemented action menu in Azure Service Bus Sender Prepared Simple and Advanced message Prepared functions for message generation

--- a/Receiver/Properties/launchSettings.json
+++ b/Receiver/Properties/launchSettings.json
@@ -1,28 +1,7 @@
 {
-	"profiles": {
-		"AzureServiceBusReceiver": {
-			"commandName": "Project",
-			"environmentVariables": {
-				"MESSAGE_BUS_RECEIVER_TYPE": "AzureServiceBus"
-			}
-		},
-		"RabbitMQReceiver": {
-			"commandName": "Project",
-			"environmentVariables": {
-				"MESSAGE_BUS_RECEIVER_TYPE": "RabbitMQ"
-			}
-		},
-		"NServiceBusAzureServiceBusReceiver": {
-			"commandName": "Project",
-			"environmentVariables": {
-				"MESSAGE_BUS_RECEIVER_TYPE": "NServiceBusAzureServiceBus"
-			}
-		},
-		"NServiceBusRabbitMQReceiver": {
-			"commandName": "Project",
-			"environmentVariables": {
-				"MESSAGE_BUS_RECEIVER_TYPE": "NServiceBusRabbitMQ"
-			}
-		}
-	}
+  "profiles": {
+    "Receiver": {
+      "commandName": "Project"
+    }
+  }
 }
