Implemented send and reply for AzureServiceBus and RabbitMQ

--- a/Receiver/appsettings.azure-service-bus.json
+++ b/Receiver/appsettings.azure-service-bus.json
@@ -3,6 +3,8 @@
 		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
 	"ConnectionSettings": {
-		"QueueName": "nativereceiver"
+		"ReceiverQueueName": "nativereceiver",
+		"SessionReceiverQueueName": "nativesessionreceiver",
+		"SessionSenderQueueName": "nativesessionsender"
 	}
 }
