--- a/Receiver/appsettings.rabbit-mq.json
+++ b/Receiver/appsettings.rabbit-mq.json
@@ -1,6 +1,8 @@
 {
 	"ConnectionSettings": {
 		"HostName": "localhost",
-		"QueueName": "nativereceiver"
+		"QueueName": "nativereceiver",
+		"ReplyReceiverQueueName": "nativereplyreceiver",
+		"ReplySenderQueueName": "nativereplysender"
 	}
 }
