--- a/Sender/appsettings.azure-service-bus.json
+++ b/Sender/appsettings.azure-service-bus.json
@@ -3,8 +3,8 @@
 		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
 	"ConnectionSettings": {
-		"ReceiverQueueName": "nativereceiver",
-		"SessionReceiverQueueName": "nativesessionreceiver",
-		"SessionSenderQueueName": "nativesessionsender"
+		"SendOnlyReceiverQueueName": "nativesendonlyreceiver",
+		"SendAndReplyReceiverQueueName": "nativesendandreplyreceiver",
+		"SendAndReplySenderQueueName": "nativesendandreplysender"
 	}
 }
