--- a/Sender/appsettings.rabbit-mq.json
+++ b/Sender/appsettings.rabbit-mq.json
@@ -1,8 +1,8 @@
 {
 	"ConnectionSettings": {
 		"HostName": "localhost",
-		"QueueName": "nativereceiver",
-		"ReplyReceiverQueueName": "nativereplyreceiver",
-		"ReplySenderQueueName": "nativereplysender"
+		"SendOnlyReceiverQueueName": "nativesendonlyreceiver",
+		"SendAndReplyReceiverQueueName": "nativesendandreplyreceiver",
+		"SendAndReplySenderQueueName": "nativesendandreplysender"
 	}
 }
