Refactored NSericeBus sender and receiver

--- a/Receiver/appsettings.n-service-bus-azure-service-bus.json
+++ b/Receiver/appsettings.n-service-bus-azure-service-bus.json
@@ -3,7 +3,7 @@
 		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
 	"ConnectionSettings": {
-		"ReceiverEndpointName": "NServiceBusReceiver",
+		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver",
 		"TopicName": "n-service-bus"
 	}
 }
