--- a/Sender/appsettings.n-service-bus-azure-service-bus.json
+++ b/Sender/appsettings.n-service-bus-azure-service-bus.json
@@ -3,8 +3,8 @@
 		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
 	},
 	"ConnectionSettings": {
-		"ReceiverEndpointName": "NServiceBusReceiver",
-		"SenderEndpointName": "NServiceBusSender",
+		"SendOnlySenderEndpointName": "NServiceBusSendOnlySender",
+		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver",
 		"TopicName": "n-service-bus"
 	}
 }
