--- a/Sender/appsettings.n-service-bus-rabbit-mq.json
+++ b/Sender/appsettings.n-service-bus-rabbit-mq.json
@@ -1,7 +1,7 @@
 {
 	"ConnectionSettings": {
 		"HostName": "localhost",
-		"SenderEndpointName": "NServiceBusSender",
-		"ReceiverEndpointName": "NServiceBusReceiver"
+		"SendOnlySenderEndpointName": "NServiceBusSendOnlySender",
+		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver"
 	}
 }
