Implemented send and reply for NServiceBus

--- a/Receiver/appsettings.n-service-bus-azure-service-bus.json
+++ b/Receiver/appsettings.n-service-bus-azure-service-bus.json
@@ -4,6 +4,7 @@
 	},
 	"ConnectionSettings": {
 		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver",
+		"SendAndReplyReceiverEndpointName": "NServiceBusSendAndReplyReceiver",
 		"TopicName": "n-service-bus"
 	}
 }
