--- a/Receiver/appsettings.n-service-bus-rabbit-mq.json
+++ b/Receiver/appsettings.n-service-bus-rabbit-mq.json
@@ -1,6 +1,7 @@
 {
 	"ConnectionSettings": {
 		"HostName": "localhost",
-		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver"
+		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver",
+		"SendAndReplyReceiverEndpointName": "NServiceBusSendAndReplyReceiver"
 	}
 }
