--- a/Sender/appsettings.n-service-bus-azure-service-bus.json
+++ b/Sender/appsettings.n-service-bus-azure-service-bus.json
@@ -5,6 +5,8 @@
 	"ConnectionSettings": {
 		"SendOnlySenderEndpointName": "NServiceBusSendOnlySender",
 		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver",
+		"SendAndReplySenderEndpointName": "NServiceBusSendAndReplySender",
+		"SendAndReplyReceiverEndpointName": "NServiceBusSendAndReplyReceiver",
 		"TopicName": "n-service-bus"
 	}
 }
