--- a/Sender/appsettings.n-service-bus-rabbit-mq.json
+++ b/Sender/appsettings.n-service-bus-rabbit-mq.json
@@ -2,6 +2,8 @@
 	"ConnectionSettings": {
 		"HostName": "localhost",
 		"SendOnlySenderEndpointName": "NServiceBusSendOnlySender",
-		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver"
+		"SendOnlyReceiverEndpointName": "NServiceBusSendOnlyReceiver",
+		"SendAndReplySenderEndpointName": "NServiceBusSendAndReplySender",
+		"SendAndReplyReceiverEndpointName": "NServiceBusSendAndReplyReceiver"
 	}
 }
