--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -9,7 +9,9 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.12.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="5.2.1" />
 		<PackageReference Include="NServiceBus" Version="8.0.3" />
+		<PackageReference Include="NServiceBus.Extensions.Logging" Version="2.0.0" />
 		<PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.0" />
 		<PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="3.1.2" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
