--- a/Sender/appsettings.n-service-bus-azure-service-bus.json
+++ b/Sender/appsettings.n-service-bus-azure-service-bus.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"AzureServiceBus": "Endpoint=sb://devxolutionbot.servicebus.windows.net/;SharedAccessKeyName=dev;SharedAccessKey=8FeOabFotxnVDmk00wC6yKVF1eXNaU/nFqz1ECqQ+j4="
+		"AzureServiceBus": "<ADD_CONNECTION_STRING>"
 	},
 	"ConnectionSettings": {
 		"SendOnlySenderEndpointName": "NServiceBusSendOnlySender",
